# UniConf

./: CMakeLists.txt  README.md
include/: BaseManager.hxx  ConfigManager.hxx  TomlManager.hxx  TomlManager.hxx.bak  UniConf.hxx  datatypes.hxx
include/UniConf/Impl/: BaseManager.hxx  JSONManager.hxx  TomlManager.hxx  Value.hxx  XMLManager.hxx  datatypes.hxx
include/UniConf/Impl/Util/: Macro.hxx  Misc.hxx
src/: BaseManager.cxx  ConfigManager.cxx  TomlManager.cxx  TomlManager.cxx.bak  UniConf.cxx
src/UniConf/Impl/: BaseManager.cxx  JSONManager.cxx  TomlManager.cxx  XMLManager.cxx
src/UniConf/Impl/Util/: Misc.cxx
